# CLI-vector-shapes

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h
area/: area.c  area.h
array/: array.c  array.h
command/: command.c  command.h
id/: id.c  id.h
nodes/: nodes.h
pixel/: pixel.c  pixel.h
shapes/: shapes.c  shapes.h
